--- a/package.json
+++ b/package.json
@@ -9,6 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
+    "@solana-developers/preset-next": "2.2.0",
+    "@solana/spl-token": "0.4.1",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/web3.js": "^1.91.7",
+    "@swc/helpers": "~0.5.2",
+    "@tabler/icons-react": "2.47.0",
+    "@tailwindcss/typography": "0.5.10",
+    "@tanstack/react-query": "5.24.1",
+    "@tanstack/react-query-next-experimental": "5.24.1",
+    "bs58": "5.0.0",
+    "buffer": "6.0.3",
+    "daisyui": "4.7.2",
+    "encoding": "0.1.13",
+    "jotai": "2.6.5",
+    "react-hot-toast": "2.4.1",
+    "tslib": "^2.3.0",
+
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
