--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
+
     "@coral-xyz/anchor": "^0.29.0",
     "@solana-developers/preset-next": "2.2.0",
     "@solana/spl-token": "0.4.1",
