--- a/package.json
+++ b/package.json
@@ -9,6 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
+    "@openbook-dex/openbook": "^0.0.9",
+    "@project-serum/anchor": "^0.26.0",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
+    "bigint-buffer": "^1.1.5",
+    
+    "@bundlr-network/client": "^0.7.1",
+    "@headlessui/react": "^1.6.5",
+    "@heroicons/react": "^2.0.12",
+    "@metaplex/js": "^4.12.0",
+    "@project-serum/serum": "^0.13.65",
+    "@solana/buffer-layout": "^4.0.0",
+    "@solana/spl-token-2": "npm:@solana/spl-token@0.2.0",
+    "@solana/wallet-adapter-wallets": "^0.16.0",
+    "axios": "^0.27.2",
+    "bn.js": "^5.2.1",
+    "browserify-zlib": "^0.2.0",
+    "buffer-layout": "^1.2.2",
+    "crypto-browserify": "^3.12.0",
+    "fs-extra": "^10.0.1",
+    "https-browserify": "^1.0.0",
+    "immer": "^9.0.12",
+    "lodash.debounce": "^4.0.8",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^9.0.0",
+    "querystring-es3": "^0.2.1",
+    "react-hook-form": "^7.33.0",
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.0.1",
+    "react-tooltip": "^4.4.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "swr": "^1.3.0",
+    "zustand": "^4.1.1",
+
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
 
     "@coral-xyz/anchor": "^0.29.0",
