--- a/package.json
+++ b/package.json
@@ -9,83 +9,80 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@metaplex-foundation/js": "^0.20.1",
-    "@openbook-dex/openbook": "^0.0.9",
-    "@project-serum/anchor": "^0.26.0",
-    "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
-    "bigint-buffer": "^1.1.5",
-    
+    "@ant-design/icons": "^5.3.7",
     "@bundlr-network/client": "^0.7.1",
+    "@coral-xyz/anchor": "^0.29.0",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^2.0.12",
-    "@metaplex/js": "^4.12.0",
-    "@project-serum/serum": "^0.13.65",
-    "@solana/buffer-layout": "^4.0.0",
-    "@solana/spl-token-2": "npm:@solana/spl-token@0.2.0",
-    "@solana/wallet-adapter-wallets": "^0.16.0",
-    "axios": "^0.27.2",
-    "bn.js": "^5.2.1",
-    "browserify-zlib": "^0.2.0",
-    "buffer-layout": "^1.2.2",
-    "crypto-browserify": "^3.12.0",
-    "fs-extra": "^10.0.1",
-    "https-browserify": "^1.0.0",
-    "immer": "^9.0.12",
-    "lodash.debounce": "^4.0.8",
-    "next-compose-plugins": "^2.2.1",
-    "next-transpile-modules": "^9.0.0",
-    "querystring-es3": "^0.2.1",
-    "react-hook-form": "^7.33.0",
-    "react-icons": "^4.10.1",
-    "react-toastify": "^9.0.1",
-    "react-tooltip": "^4.4.3",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "swr": "^1.3.0",
-    "zustand": "^4.1.1",
-
+    "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
-
-    "@coral-xyz/anchor": "^0.29.0",
+    "@metaplex/js": "^4.12.0",
+    "@openbook-dex/openbook": "^0.0.9",
+    "@project-serum/anchor": "^0.26.0",
+    "@project-serum/serum": "^0.13.65",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
     "@solana-developers/preset-next": "2.2.0",
+    "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "0.4.1",
+    "@solana/spl-token-2": "npm:@solana/spl-token@0.2.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.16.0",
     "@solana/web3.js": "^1.91.7",
     "@swc/helpers": "~0.5.2",
     "@tabler/icons-react": "2.47.0",
     "@tailwindcss/typography": "0.5.10",
     "@tanstack/react-query": "5.24.1",
     "@tanstack/react-query-next-experimental": "5.24.1",
+    "antd": "^5.18.2",
+    "apexcharts": "^3.45.2",
+    "axios": "^0.27.2",
+    "bigint-buffer": "^1.1.5",
+    "bn.js": "^5.2.1",
+    "browserify-zlib": "^0.2.0",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
+    "buffer-layout": "^1.2.2",
+    "crypto-browserify": "^3.12.0",
     "daisyui": "4.7.2",
     "encoding": "0.1.13",
-    "jotai": "2.6.5",
-    "react-hot-toast": "2.4.1",
-    "tslib": "^2.3.0",
-
-    
-    "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
+    "fs-extra": "^10.0.1",
+    "https-browserify": "^1.0.0",
+    "immer": "^9.0.12",
+    "jotai": "2.6.5",
     "jsvectormap": "^1.5.3",
+    "lodash.debounce": "^4.0.8",
+    "next": "14.1.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^9.0.0",
+    "querystring-es3": "^0.2.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.33.0",
+    "react-hot-toast": "2.4.1",
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.0.1",
+    "react-tooltip": "^4.4.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "swr": "^1.3.0",
+    "tslib": "^2.3.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
