--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "0.4.1",
     "@solana/spl-token-2": "npm:@solana/spl-token@0.2.0",
+    "@solana/spl-token-3": "npm:@solana/spl-token@^0.4.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
